<?xml version="1.0" encoding="utf-8"?> <!-- -->

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_height="wrap_content" 
    android:orientation="vertical" 
    android:layout_width="fill_parent">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		>
	    
		<TextView 
		    android:layout_height="wrap_content" 
		    android:layout_width="fill_parent" 
		    android:layout_weight="1" 
		    android:id="@+id/textTimelineUser" 
		    android:text="@string/TimelineTextUser"
		    android:textStyle="bold" />
		
		<TextView 
		    android:layout_height="wrap_content"
			android:layout_width="fill_parent" 
			android:layout_weight="1" 
			android:gravity="right" 
			android:id="@+id/textTimelineCreatedAt"
			android:text="@string/TimelineTextTime" />
		
	</LinearLayout>
	
	<TextView 
	    android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/textTimelineText"
		android:text="@string/TimelineTextText" />
	
</LinearLayout>