<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/AppName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/TextColorRed" />

            <TextView
                android:id="@+id/textViewCharCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@android:string/unknownName"
                android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/editTextMultiline"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.28"
        android:gravity="top"
        android:hint="@string/typemessagehere"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SubmitButtonText" />


    </LinearLayout>

</LinearLayout>